<resources>
    <string name="app_name">corsiblockapp</string>
    <string name="blockspan">Block Span: 0</string>
    <string name="Score">Total Score: 0</string>
    <string name="Text">Corsi Block Test</string>
    <string name="Restart">Restart</string>
    <string name="Start">Start</string>
    <string name="Email">Email your scores</string>
    <string name="Title">Corsi Block Game</string>
    <color name="black">#000000</color>
    <color name="blue">#0000FF</color>
    <color name="green">#008000</color>
    
    <string-array name="activities">
        <item>Utilities</item>
        <item>Save To Cloud</item>
        <item>Email</item>
        <item>Write Notes</item>
        <item>Graph</item>
    </string-array>

</resources>
